# MatrixMerchant

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
data/: array_complex_general.mtx  array_complex_general_3_4.mtx  array_complex_symmetric.mtx  array_complex_symmetric_3_3.mtx  array_integer_general.mtx  array_integer_general_3_4.mtx  array_integer_symmetric.mtx  array_integer_symmetric_3_3.mtx  array_real_general.mtx  array_real_general_1_4.mtx  array_real_general_3_1.mtx  array_real_general_3_4.mtx  array_real_general_3_4_int.mtx  array_real_symmetric.mtx  array_real_symmetric_3_3.mtx  coordinate_complex_general_3_4_9.mtx  coordinate_real_general_3_4_9.mtx  out_array_real_general.mtx  vector_real_column.mtx  vector_real_row.mtx
include/: MatrixMerchant.h
include/MatrixMerchant/: AMatrix  Core  Eigen  Ublas
include/MatrixMerchant/src/: AMatrixSupport.h  EigenSupport.h  MatrixMerchant.h  UblasSupport.h
test/: CMakeLists.txt  TestAMatrix.cc  TestEigen.cc  TestUblas.cc
